# EZGripper_ros2

./: README.md
ezgripper_control/: CMakeLists.txt  package.xml
ezgripper_description/: CMakeLists.txt  package.xml
ezgripper_driver/: CMakeLists.txt  package.xml
ezgripper_driver/config/: controllers_dual_gen1.yaml  controllers_dual_gen2.yaml  controllers_quad.yaml  gripper_params.yaml
ezgripper_driver/launch/: action_server.launch.py  display.launch.py  gazebo.launch.py  joy.launch.py  joy2.launch.py  joy2sync.launch.py  joy_tcp.launch.py
ezgripper_driver/nodes/: ezgripper_action_server.py
ezgripper_driver/nodes/gripper_actuation/: close_gripper  open_gripper
ezgripper_driver/rviz/: urdf.rviz
ezgripper_driver/scripts/: ezgripper_action_server.py  ezgripper_gui.py  ezgripper_joy_action_client.py
ezgripper_driver/scripts/ezgripper_libs/: ezgripper_interface.py
ezgripper_driver/urdf/dual_gen1/: ezgripper_dual_gen1.urdf.xacro
ezgripper_driver/urdf/dual_gen2/: ezgripper_dual_gen2_articulated.urdf.xacro
ezgripper_driver/urdf/quad/: ezgripper_quad.urdf.xacro
ezgripper_dual_gen1_moveit_config/: CMakeLists.txt  package.xml
ezgripper_dual_gen2_moveit_config/: CMakeLists.txt  package.xml
ezgripper_dual_gen2_single_mount_moveit_config/: CMakeLists.txt  package.xml
ezgripper_dual_gen2_triple_mount_moveit_config/: CMakeLists.txt  package.xml
ezgripper_gazebo/: CMakeLists.txt  package.xml
ezgripper_quad_moveit_config/: CMakeLists.txt  package.xml
ezgripper_single_mount_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+55 files in other folders)
