<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ezgripper_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="leander@blackcoffeerobotics.com">leander</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

	<!-- Python Dependencies -->
  <exec_depend>python3-serial</exec_depend>

	<!-- ROS Dependencies -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
	<exec_depend>joint_state_publisher_gui</exec_depend>
	<exec_depend>joint_state_controller</exec_depend>
	<exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
	<exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>

	<!-- Gazebo mimic dependencies -->
	<!-- <exec_depend>roboticsgroup_upatras_gazebo_plugins</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
